--- a/PaliGemma_supplemental_experiments.ipynb
+++ b/PaliGemma_supplemental_experiments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPldk8n0tN2eAFi+O2ch/Q0",
+      "authorship_tag": "ABX9TyMo4Ho7bDsryHjVNXnNZeeQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,41 +81,13 @@
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
-        "from torchviz import make_dot"
+        "# from torchviz import make_dot"
       ],
       "metadata": {
-        "id": "6FW1ysvv8Div",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 364
-        },
-        "outputId": "4a04a988-aba5-4851-8f41-e570194dd723"
+        "id": "6FW1ysvv8Div"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'torchviz'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-e238e6edc9d7>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtorchviz\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmake_dot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torchviz'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ]
+      "execution_count": 31,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -663,7 +635,7 @@
         "id": "gEJ8BmE6wWK2",
         "outputId": "72f04135-2c06-4b55-815c-f56b0bdcb357"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +697,7 @@
         "id": "dXEvGsWP6aY9",
         "outputId": "68776845-335a-4725-eb89-78a05bb851c6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -785,7 +757,7 @@
       "metadata": {
         "id": "l07u0JsP6miL"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -811,7 +783,7 @@
         "id": "upmntvBkDrqS",
         "outputId": "48415a36-c927-46a1-c2b3-a01f6e26fea9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,7 +812,7 @@
         "id": "nWUvSy2MMWq3",
         "outputId": "681bd414-8abe-4414-bdc2-717fb72bca1b"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -866,7 +838,7 @@
         "id": "WAgcYVv2Dtnf",
         "outputId": "b6ca0446-632c-4c31-9520-07826deb0e01"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -895,7 +867,7 @@
         "id": "QO0836iKFhZx",
         "outputId": "afe44a04-3e03-4bb7-dac3-e511c2f67d15"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -921,7 +893,7 @@
         "id": "GxtT3a3oDxUR",
         "outputId": "36200b03-0cec-48b3-d872-dcc03488050f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -969,7 +941,7 @@
         "id": "2UGHBx_tD69u",
         "outputId": "8e40b288-d062-49a1-c080-6bc5c264c41b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +972,7 @@
         "id": "1EWjUwudEZgq",
         "outputId": "4c84ce90-46f2-412c-d897-fd43bf31e1e0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1032,7 +1004,7 @@
         "id": "Fg7ww5vDEc5C",
         "outputId": "20a541cf-502c-489e-a361-28105d1fb306"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1074,7 +1046,7 @@
         "id": "E8DikLiaEkyx",
         "outputId": "c0853e2c-c189-4526-d879-ebb9009176e0"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1119,7 +1091,7 @@
         "id": "qpFf40ZeFBLs",
         "outputId": "7c2f8769-a77d-40f8-ddf9-438217d919c3"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1145,10 +1117,68 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Timing Contiguous vs Non-contiguous operations"
+      ],
+      "metadata": {
+        "id": "YFurUgJ9Vk2w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "\n",
+        "# Create a larger tensor for timing tests\n",
+        "large = torch.randn(2000, 2000)\n",
+        "large_t = large.transpose(0, 1)  # Non-contiguous\n",
+        "\n",
+        "# Matrix multiplication with non-contiguous tensor\n",
+        "start = time.time()\n",
+        "for _ in range(100):\n",
+        "    _ = torch.matmul(large, large_t)\n",
+        "non_contiguous_time = time.time() - start\n",
+        "\n",
+        "# Make a contiguous copy\n",
+        "large_t_cont = large_t.contiguous()\n",
+        "\n",
+        "# Matrix multiplication with contiguous tensor\n",
+        "start = time.time()\n",
+        "for _ in range(100):\n",
+        "    _ = torch.matmul(large, large_t_cont)\n",
+        "contiguous_time = time.time() - start\n",
+        "\n",
+        "print(f\"\\nPerformance comparison (Matrix Multiply):\")\n",
+        "print(f\"Non-contiguous: {non_contiguous_time:.6f} seconds\")\n",
+        "print(f\"Contiguous:     {contiguous_time:.6f} seconds\")"
+      ],
+      "metadata": {
+        "id": "JMTTJlc8FDzm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71996c93-9d03-4d17-cfca-5c41f96f99af"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Performance comparison (Matrix Multiply):\n",
+            "Non-contiguous: 27.267856 seconds\n",
+            "Contiguous:     27.087290 seconds\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "JMTTJlc8FDzm"
+        "id": "vqT41wiDVoBa"
       },
       "execution_count": null,
       "outputs": []
